removing vertex paint from vertex colors removes uvs or crashes #36227

Closed
opened 2013-07-20 00:59:17 +02:00 by Will Barry · 5 comments

%%%--- Operating System, Graphics card ---

OS: XPsp3

GPU: Geforce 560 gtx ti

CPU:AMD Athlon II X3 440

- Blender version with error, and version that worked ---

version with error: 2.68

Version that worked: 2.67

- Short description of error ---

Removing Col from the Vertex colors under Object Data, either removes uvs on the object or crashes blender to destop.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- OS: XPsp3 GPU: Geforce 560 gtx ti CPU:AMD Athlon II X3 440 - Blender version with error, and version that worked --- version with error: 2.68 Version that worked: 2.67 - Short description of error --- Removing Col from the Vertex colors under Object Data, either removes uvs on the object or crashes blender to destop. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Extra note:

In this attached Blend it crashes. On the other with a multi-res modifier of 3 it removed uvs.%%%

%%%Extra note: In this attached Blend it crashes. On the other with a multi-res modifier of 3 it removed uvs.%%%
Author

%%%Uvs are large. might have to scroll a bit.%%%

%%%Uvs are large. might have to scroll a bit.%%%

%%%own bad regression, didn't crash in my tests, fixed r58436.
will be in '2.68a'.%%%

%%%own bad regression, didn't crash in my tests, fixed r58436. will be in '2.68a'.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36227
No description provided.