fix own bad regression/bug, removing vertex colors crashes [#36227]